--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,13 +9,17 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
+jobs:
+- job: SingleJob  # Define a single job
+  displayName: 'Build and Deploy'  # Give the job a name
 
-- script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+  steps:
+  - task: NodeTool@0
+    inputs:
+      versionSpec: '10.x'
+    displayName: 'Install Node.js'
+
+  - script: |
+      npm install
+      npm run build
+    displayName: 'npm install and build'
