--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,17 +9,17 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-jobs:
-- job: SingleJob  # Define a single job
-  displayName: 'Build and Deploy'  # Give the job a name
+# jobs:
+# - job: SingleJob  # Define a single job
+#   displayName: 'Build and Deploy'  # Give the job a name
 
-  steps:
-  - task: NodeTool@0
-    inputs:
-      versionSpec: '10.x'
-    displayName: 'Install Node.js'
+steps:
+- task: NodeTool@0
+  inputs:
+    versionSpec: '10.x'
+  displayName: 'Install Node.js'
 
-  - script: |
-      npm install
-      npm run build
-    displayName: 'npm install and build'
+- script: |
+    npm install
+    npm run build
+  displayName: 'npm install and build'
