--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -11,6 +11,7 @@ metadata:
       icon: code
   tags:
     - typescript
+    - azure
     - azure-function
     - azure-pipeline
     - applicationtype-serverlessapplication
